zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__clipboard_image_pasted_into_chat_input.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
assertion_line: 149
expression: rendered_after_paste
---
                                                                                
    ▄  ▄     Zeta Code v0.1.0                                                   
  ▗█▛██▜█▖   Automatic model · Access unknown                                   
  ▝▜████▛▘   .                                                                  
    ▝  ▘                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> [Image #1]                                                                    
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
