zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__clipboard_image_top_tip.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: rendered
---
                                                                                
   ▐▖  ▗▌    Zeta Code v0.1.0                                                   
   ▗█▄▄█▖    Automatic model · Access unknown                                   
  ▗█▝██▘█▖   .                                                                  
   ▜▌  ▐▛                                                                       
   ▝    ▘                                                                       
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                          image in clipboard · ctrl+v to paste  
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
