zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__completed_update_notice.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: "render(&app, 80, 20)"
---
                                                                                
    ▄  ▄     Zeta Code v0.1.0                                                   
  ▗█▛██▜█▖   Automatic model · Access unknown                                   
  ▝▜████▛▘   .                                                                  
    ▝  ▘                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                               Zeta 1.2.3 is ready · restart to use the update  
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
