zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__config_issues_tab_shows_one_auto_refresh_value.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: "render(&app, 100, 20)"
---
                                                                                                    
    ▄  ▄     Zeta Code v0.1.0                                                                       
  ▗█▛██▜█▖   Automatic model · Access unknown                                                       
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Config ───────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   General    Providers    Language servers    Issues                                               
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search configuration                                                                         │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> Auto refresh                                                                               Never  
                                                                                                    
  Enter/Space to change  ·  Tab/Shift+Tab to switch  ·  / to search  ·  Esc to close
