zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__input_history_search_cancelled.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: "render(&app, 100, 20)"
---
                                                                                                    
    ▄  ▄     Zeta Code v0.1.0                                                                       
  ▗█▛██▜█▖   Automatic model · Access unknown                                                       
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ⏸ ask permissions on
