zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__model_tab_bar_focused.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: "render(&app, 100, 18)"
---
                                                                                                    
    ▄  ▄     Zeta Code v0.1.0                                                                       
  ▗█▛██▜█▖   Automatic model · Access unknown                                                       
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Model ────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   Favorites    My gateway                                                                          
  gateway-model                                                                                     
                                                                                                    
  Tab/Shift+Tab to switch · Enter to return · Esc to close
