zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__pull_request_agent_task.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: "render(&app, 100, 20)"
---
                                                                                                    
    ▄  ▄     Zeta Code v0.1.0                                                                       
  ▗█▛██▜█▖   Automatic model · Access unknown                                                       
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
> /pr                                                                                               
                                                                                                    
> Prepare and create a pull request for the current changes using the connected GitHub tools. Verify
the target branch and checks, and report the pull request link.                                     
                                                                                                    
                                                                                                    
                                                                                                    
⠋ Starting · 0m 00s total                                                                           
                                                                         shift+tab to cycle policy  
────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ⏸ ask permissions on
