zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__short_provider_panel.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: output
---
─ Custom provider ──────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  Provider name                                                                                     
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Provider name                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> Base URL                                                                                          
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ https://example.com/v1                                                                       │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  API key                                                                                           
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ API key (optional)                                                                           │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
                                                                                                    
                                                                                                    
  Enter to edit  ·  Tab/Shift+Tab to move  ·  Esc to return
